--- a/catalog/view/theme/default/template/common/popups.twig
+++ b/catalog/view/theme/default/template/common/popups.twig
@@ -20,12 +20,12 @@
             <label class="control-label" for="input-enquiry">{{ entry_enquiry }}</label>
               <textarea name="enquiry" rows="10" id="input-enquiry" class="form-control">{{ enquiry }}</textarea>
           </div>
+            {{ captcha }}
 		  <div class="form-group"><input type="checkbox" name="whatsapp" value="1" checked> Хочу получать ответ в WhatsApp</div>
 		  <div class="form-group"><input type="checkbox" name="mailing" value="1" checked> Хочу получать рассылку на Email</div>
 		  <div class="form-group obj_agree"><input type="checkbox" name="agree" value="1"> Я согласен на обработку персональных данных в соответствии с <a href="{{ ur }}">политикой конфиденциальности</a>
 		  <div class="ag"></div>
 		  </div>
-          {{ captcha }}
         </fieldset>
 		<div id="r"></div>
         <div class="buttons">
@@ -59,23 +59,28 @@ $('#button-form1').on('click', function() {
 				    $('#polpol .obj_name').addClass('has-error');
 					$('#polpol input[name=\'name\']').after('<div class="text-danger">' + json['error']['name'] + '</div>');
 				}
-				
+
 				if(json['error']['telephone']) {
 				    $('#polpol .obj_telephone').addClass('has-error');
 					$('#polpol input[name=\'telephone\']').after('<div class="text-danger">' + json['error']['telephone'] + '</div>');
 				}
-				
+
 				if(json['error']['email']) {
 				    $('#polpol .obj_email').addClass('has-error');
 					$('#polpol input[name=\'email\']').after('<div class="text-danger">' + json['error']['email'] + '</div>');
 				}
-				
+
 				if(json['error']['agree']) {
 				    $('#polpol .obj_agree').addClass('has-error');
-					
+
 					$('#polpol .ag').after('<div class="text-danger">' + json['error']['agree'] + '</div>');
 				}
-				
+
+                if(json['error']['captcha']) {
+                    $('#polpol .obj_captcha').addClass('has-error');
+                    $('#polpol input[name=\'captcha\']').after('<div class="text-danger">' + json['error']['captcha'] + '</div>');
+                }
+
 			}
 
 			if (json['success']) {
@@ -85,6 +90,7 @@ $('#button-form1').on('click', function() {
 				$('#polpol input[name=\'telephone\']').val('');
 				$('#polpol input[name=\'email\']').val('');
 				$('#polpol textarea[name=\'enquiry\']').val('');
+                $('#polpol textarea[name=\'captcha\']').val('');
 			}
 		}
 	});
