--- a/catalog/view/theme/default/template/extension/captcha/basic.twig
+++ b/catalog/view/theme/default/template/extension/captcha/basic.twig
@@ -1,10 +1,24 @@
-<fieldset>
-  <legend>{{ text_captcha }}</legend>
-  <div class="form-group required">
+{#<fieldset>#}
+{#  <legend>{{ text_captcha }}</legend>#}
+  <div class="form-group required {{ route == 'common/popups' ? 'obj_captcha' : '' }}">
     {% if route|slice(0, 9) == 'checkout/' %}
     <label class="control-label" for="input-payment-captcha">{{ entry_captcha }}</label>
     <input type="text" name="captcha" id="input-payment-captcha" class="form-control" autocomplete="off" />
     <img src="index.php?route=extension/captcha/basic/captcha" alt="" />
+    {% elseif route == 'information/contact' %}
+      <label class="control-label imi" for="input-captcha">{{ entry_captcha }}</label>
+      <input type="text" name="captcha" id="input-captcha" class="form-control" />
+      <img src="index.php?route=extension/captcha/basic/captcha" alt="" style="margin-top: 10px" />
+      {% if error_captcha %}
+        <div class="text-danger">{{ error_captcha }}</div>
+      {% endif %}
+    {% elseif route in ['common/popups', 'common/popups2', 'product/product'] %}
+        <label class="control-label" for="input-captcha">{{ entry_captcha }}</label>
+        <input type="text" name="captcha" value="" id="input-captcha" class="form-control">
+        <img src="index.php?route=extension/captcha/basic/captcha" alt="" style="margin-top: 10px" />
+        {% if error_captcha %}
+          <div class="text-danger">{{ error_captcha }}</div>
+        {% endif %}
     {% else %}
     <label class="col-sm-2 control-label" for="input-captcha">{{ entry_captcha }}</label>
     <div class="col-sm-10">
@@ -16,4 +30,4 @@
     </div>
     {% endif %}
   </div>
-</fieldset>
+{#</fieldset>#}
