--- a/catalog/view/theme/default/template/common/popups.twig
+++ b/catalog/view/theme/default/template/common/popups.twig
@@ -84,13 +84,7 @@ $('#button-form1').on('click', function() {
 			}
 
 			if (json['success']) {
-				$('#r').after('<div class="alert alert-success alert-dismissible"><i class="fa fa-check-circle"></i> ' + json['success'] + '</div>');
-
-				$('#polpol input[name=\'name\']').val('');
-				$('#polpol input[name=\'telephone\']').val('');
-				$('#polpol input[name=\'email\']').val('');
-				$('#polpol textarea[name=\'enquiry\']').val('');
-                $('#polpol textarea[name=\'captcha\']').val('');
+				$('#polpol').html('<div class="col-sm-12"><div class="alert alert-success alert-dismissible"><i class="fa fa-check-circle"></i> ' + json['success'] + '</div></div>');
 			}
 		}
 	});
