--- a/admin/view/template/customer/customer_form.twig
+++ b/admin/view/template/customer/customer_form.twig
@@ -65,7 +65,7 @@
                             <div class="text-danger">{{ error_company }}</div>
                             {% endif %}</div>
                         </div>
-                        <div class="form-group hidden">
+                        <div class="form-group">
                           <label class="col-sm-2 control-label" for="input-customer-group">{{ entry_customer_group }}</label>
                           <div class="col-sm-10">
                             <select name="customer_group_id" id="input-customer-group" class="form-control">
