Заменить в карточке товара слова

--- a/catalog/view/theme/default/template/product/product.twig
+++ b/catalog/view/theme/default/template/product/product.twig
@@ -96,7 +96,7 @@
             <li><b class="naimen">{{ text_stock }}</b> {{ stock }}</li>
             {% if weight %}<li><b class="naimen">Вес:</b> {{ weight }}</li>{% endif %}
             {% if length %}<li><b class="naimen">Габариты:</b> {{ length }} X {{ width }} X {{ height }}</li>{% endif %}
-            {% if location %}<li><b class="naimen">Адрес самовывоза:</b> {{ location }}</li>{% endif %}
+            {% if location %}<li><b class="naimen">Доставка:</b> {{ location }}</li>{% endif %}
           </ul>
           {% if price %}
           <ul class="list-unstyled float8">
