--- a/catalog/view/theme/default/template/extension/module/category.twig
+++ b/catalog/view/theme/default/template/extension/module/category.twig
@@ -22,3 +22,6 @@
         {% endfor %}
     </ul>
 </nav>
+<script>
+    $('#menuVertical > ul > li > ul').css('min-height', $('#column-left').height());
+</script>
