--- a/catalog/view/theme/default/template/product/product.twig
+++ b/catalog/view/theme/default/template/product/product.twig
@@ -52,6 +52,7 @@
 
               <div class="col-sm-12">
                   {% if attribute_groups %}
+                      <h3>{{ tab_attribute }}</h3>
                       <div class="tab-pane" id="tab-specification">
                           <table class="table table-bordered">
                               {% for attribute_group in attribute_groups %}
@@ -67,7 +68,10 @@
                           </table>
                       </div>
                   {% endif %}
-                  <div class="tab-pane" id="tab-description">{{ description }}</div>
+                  <div class="tab-pane" id="tab-description">
+                      <h3>{{ tab_description }}</h3>
+                      {{ description }}
+                  </div>
               </div>
 
 		 </div>
@@ -107,7 +111,7 @@
           <h3 class="h3_prod">{{ heading_title }}</h3>
           <ul class="list-unstyled">
             {% if manufacturer %}
-            <li>{{ text_manufacturer }} <a href="{{ manufacturers }}">{{ manufacturer }}</a></li>
+                <li><b class="naimen">{{ text_manufacturer }}</b> <a href="{{ manufacturers }}">{{ manufacturer }}</a></li>
             {% endif %}
 
             {% if reward %}
@@ -345,7 +349,7 @@
             </div>
             <div class="col-sm-4"><button class="btn toCopy" data-clipboard-text="{{ hrr }}">Скопировать ссылку</button></div>
 
-            <div class="col-sm-12">
+            <div class="col-sm-12" style="margin-top: 20px">
                 {% if video %}
                     <div class="tab-pane" id="tab-video">
                         <iframe width="100%" style="height: auto" src="{{ video }}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -404,60 +408,32 @@
       </div>
       <div class="clear"></div>
       <p><hr></p>
-      <div class="row">
-
-
-
-
-      </div>
-
-
 
       {% if products %}
       <h3>{{ text_related }}</h3>
-      <div class="row"> {% set i = 0 %}
-        {% for product in products %}
-        {% if column_left and column_right %}
-        {% set class = 'col-xs-8 col-sm-6' %}
-        {% elseif column_left or column_right %}
-        {% set class = 'col-xs-6 col-md-4' %}
-        {% else %}
-        {% set class = 'col-xs-6 col-sm-3' %}
-        {% endif %}
-        <div class="{{ class }}">
-          <div class="product-thumb transition">
-            <div class="image"><a href="{{ product.href }}"><img src="{{ product.thumb }}" alt="{{ product.name }}" title="{{ product.name }}" class="img-responsive" /></a></div>
-            <div class="caption">
-              <h4><a href="{{ product.href }}">{{ product.name }}</a></h4>
-              <p>{{ product.description }}</p>
-              {% if product.rating %}
-              <div class="rating"> {% for j in 1..5 %}
-                {% if product.rating < j %} <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-1x"></i></span> {% else %} <span class="fa fa-stack"><i class="fa fa-star fa-stack-1x"></i><i class="fa fa-star-o fa-stack-1x"></i></span> {% endif %}
-                {% endfor %} </div>
-              {% endif %}
-              {% if product.price %}
-              <p class="price"> {% if not product.special %}
-                {{ product.price }}
-                {% else %} <span class="price-new">{{ product.special }}</span> <span class="price-old">{{ product.price }}</span> {% endif %}
-                {% if product.tax %} <span class="price-tax">{{ text_tax }} {{ product.tax }}</span> {% endif %} </p>
-              {% endif %} </div>
-            <div class="button-group">
-              <button type="button" onclick="cart.add('{{ product.product_id }}', '{{ product.minimum }}');"><span class="hidden-xs hidden-sm hidden-md">{{ button_cart }}</span> <i class="fa fa-shopping-cart"></i></button>
-              <button type="button" data-toggle="tooltip" title="{{ button_wishlist }}" onclick="wishlist.add('{{ product.product_id }}');"><i class="fa fa-heart"></i></button>
-              <button type="button" data-toggle="tooltip" title="{{ button_compare }}" onclick="compare.add('{{ product.product_id }}');"><i class="fa fa-exchange"></i></button>
-            </div>
+          <div class="row spyns"> {% for product in products %}
+                  <div class="product-layout col-lg-3 col-md-3 col-sm-4 col-xs-6 yiy">
+                      <div class="product-thumb transition">
+                          <div class="image"><a href="{{ product.href }}"><img src="{{ product.thumb }}" alt="{{ product.name }}" title="{{ product.name }}" class="img-responsive" /></a></div>
+                          <div class="caption">
+                              <h4><a href="{{ product.href }}">{{ product.name }}</a></h4>
+                              <p class="brend">{{ product.manufacturer }}</p>
 
-          </div>
-        </div>
-        {% if column_left and column_right and (i + 1) % 2 == 0 %}
-        <div class="clearfix visible-md visible-sm"></div>
-        {% elseif column_left or column_right and (i + 1) % 3 == 0 %}
-        <div class="clearfix visible-md"></div>
-        {% elseif (i + 1) % 4 == 0 %}
-        <div class="clearfix visible-md"></div>
-        {% endif %}
-        {% set i = i + 1 %}
-        {% endfor %} </div>
+                              {% if product.price %}
+                                  <p class="price"> {% if not product.special %}
+                                          {{ product.price }}
+                                      {% else %} <span class="price-new">{{ product.special }}</span> <span class="price-old">{{ product.price }}</span> {% endif %}
+                                  </p>
+                              {% endif %}
+                          </div>
+                          <div class="qt">
+                              <button type="button" class="ct3" onclick="window.location.href='{{ product.href }}'">Подробнее</button>
+                              <button type="button" class="ct2 {% if product.w %}activ{% endif %}" data-toggle="tooltip" title="{{ button_wishlist }}" onclick="wishlist.add('{{ product.product_id }}'); $(this).toggleClass('activ');"> </button>
+                              <button type="button" class="ct2" data-toggle="tooltip" title="{{ button_compare }}" onclick="compare.add('{{ product.product_id }}'); $(this).toggleClass('activ');"> </button>
+                          </div>
+                      </div>
+                  </div>
+              {% endfor %} </div>
         {% endif %}
         {% if tags %}
         <p>{{ text_tags }}
