--- a/catalog/view/theme/default/template/product/product.twig
+++ b/catalog/view/theme/default/template/product/product.twig
@@ -372,23 +372,25 @@
                                     <div class="col-sm-12">
                                         <label class="control-label" for="input-review">{{ entry_review }}</label>
                                         <textarea name="text" rows="5" id="input-review" class="form-control"></textarea>
-                                        <div class="help-block">{{ text_note }}</div>
                                     </div>
                                 </div>
                                 <div class="form-group required">
                                     <div class="col-sm-12">
                                         <label class="control-label">{{ entry_rating }}</label>
-                                        &nbsp;&nbsp;&nbsp; {{ entry_bad }}&nbsp;
-                                        <input type="radio" name="rating" value="1" />
-                                        &nbsp;
-                                        <input type="radio" name="rating" value="2" />
-                                        &nbsp;
-                                        <input type="radio" name="rating" value="3" />
-                                        &nbsp;
-                                        <input type="radio" name="rating" value="4" />
-                                        &nbsp;
-                                        <input type="radio" name="rating" value="5" />
-                                        &nbsp;{{ entry_good }}</div>
+                                        <div style="text-align: center">
+                                            <span style="float:left;">{{ entry_bad }}</span>
+                                            <input type="radio" name="rating" value="1"/>
+                                            &nbsp;
+                                            <input type="radio" name="rating" value="2"/>
+                                            &nbsp;
+                                            <input type="radio" name="rating" value="3"/>
+                                            &nbsp;
+                                            <input type="radio" name="rating" value="4"/>
+                                            &nbsp;
+                                            <input type="radio" name="rating" value="5"/>
+                                            <span style="float: right">{{ entry_good }}</span>
+                                        </div>
+                                    </div>
                                 </div>
                                 {{ captcha }}
                                 <div class="buttons clearfix">
